--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "naive-ui": "^2.34.2",
+    "prettier": "^2.8.1",
     "vitepress": "^1.0.0-alpha.30"
+  },
+  "dependencies": {
+    "less": "^4.1.3",
+    "lodash": "^4.17.21"
   }
 }
